# tietoliikenteensovellus2024

./: .gitignore  README.md  TL_Project_Week2-main – Pikakuvake.lnk  data.csv  tcphttp.py
Linux/: blereceiver.py  measurements.php
TL_Project_Week2-main/Bluetooth/: CMakeLists.txt  prj.conf
TL_Project_Week2-main/Bluetooth/build_1/: .ninja_log  .vscode-nrf-connect.json  Bluetooth_sysbuild_cache.txt.tmp  CMakeCache.txt  build.ninja  cmake_install.cmake  domains.yaml  merged.hex
TL_Project_Week2-main/Bluetooth/build_1/Bluetooth/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
TL_Project_Week2-main/Bluetooth/build_1/Bluetooth/Kconfig/: Kconfig.shield.defconfig
TL_Project_Week2-main/Bluetooth/build_1/Bluetooth/modules/cmsis/: cmake_install.cmake
TL_Project_Week2-main/Bluetooth/build_1/Bluetooth/modules/hal_nordic/: cmake_install.cmake
TL_Project_Week2-main/Bluetooth/build_1/Bluetooth/modules/libmetal/: cmake_install.cmake
TL_Project_Week2-main/Bluetooth/build_1/Bluetooth/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.dts.d  zephyr.elf  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
TL_Project_Week2-main/Bluetooth/build_1/Kconfig/: Kconfig.shield
TL_Project_Week2-main/Bluetooth/build_1/_sysbuild/: cmake_install.cmake
TL_Project_Week2-main/Bluetooth/build_1/zephyr/kconfig/: sources.txt
TL_Project_Week2-main/Bluetooth/src/: adc.c  adc.h  main.c  my_lbs.c  my_lbs.h
(+74 files in other folders)
